# scl

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  arr.c  color.h  dic.c  dic.h  helpers.h  main.c  makefile  rd.c  scl.c  scl.h  sockets.c  sockets.h  spin.c  spin.h  tests.c  tinysockets.c  tinysockets.h
data/: array.h  hmap.h  map.h
math/: hash.h  prime.h
net/: http.h  socket.h
print/: color.h  spin.h
src/: array.c  hash.c  hmap.c  http.c  map.c  prime.c  socket.c  sockets.c  spin.c
tests/: arrays.c  client.c  hmaps.c  map.c  maps.c  queue.c  requester.c  server.c  spin.c
utils/: helpers.h
